Fixes Disqus not switching to dark mode

--- a/assets/style.css
+++ b/assets/style.css
@@ -21,6 +21,16 @@
   border: 2px solid #121212;
 }
 
+:root {
+  color-scheme: light dark;
+}
+
+@media (prefers-color-scheme: dark) {
+  iframe[src*="disqus.com"] {
+    color-scheme: light;
+  }
+}
+
 body {
   font-family: "Inter";
   background: #191919;
